# rs-ulanzi-d200

./: .gitignore  .gitlab-ci.yml  40-opendeck-ulanzi.rules  CHANGELOG.MD  CHANGELOG.md  CONFIGURATION_GUIDE.md  Cargo.toml  LICENSE  README.md  TECH_BREIF.md  config.yaml  pack.sh
docs/: 40-opendeck-ulanzi.rules  CLASS_STRUCTURE.md  DESIGN.md  DEVICE_ID_LOGIC.md  REF_LOGIC.md  REQUIREMENTS.md  USER_STORIES.md  mirajazz.md  opendeck-m18.md
src/: action.rs  check_openaction.rs  config.rs  daemon.rs  device.rs  lib.rs  main.rs  manifest.json  openaction_client.rs  system_monitor.rs  telemetry.rs
