[package]
name = "rs-ulanzi-d200-linux"
version = "0.6.2"
edition = "2024"

[dependencies]
async-hid = { version = "0.5.1", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0"
zip = "8.6.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.10"
byteorder = "1.5"
rand = "0.10.1"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.2", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3.31"
url = "2.5"
async-trait = "0.1"
chrono = "0.4.44"
sysinfo = "0.39.2"
image = { version = "0.25.9", features = ["jpeg"] }
data-url = "0.3"
openaction = "2.6.0"

[target.'cfg(windows)'.dependencies]
async-hid = { version = "0.4.4", default-features = false, features = ["tokio", "win32"] }